--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="/modernizr.js"></script>
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
     <script type="text/javascript" src="/require.js" data-main="/js/origin.js"></script>
-    <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" /> -->
+    <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
     <meta http-equiv="Pragma" content="no-store, no-cache" />
     <meta http-equiv="Expires" content="0" />
   </head>
