Fix lib import path

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     <title>{{productName}}</title>
     <link rel="icon" type="image/png" href="/css/assets/favicon.png" />
     <link rel="stylesheet" href="/css/adapt.css" />
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
     <script type="text/javascript" src="/modernizr.js"></script>
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
     <script type="text/javascript" src="/require.js" data-main="/js/origin.js"></script>
