--- a/app/modules/projects/templates/projectsSidebar.hbs
+++ b/app/modules/projects/templates/projectsSidebar.hbs
@@ -6,11 +6,11 @@
     <span class="projects-sidebar-add-course-inner">{{t 'app.addnewproject'}}</span>
   </button>
 
-  {{#ifHasPermissions "*/*:create,*/*:read,*/*:update,*/*:delete"}}
+  {{#ifHasScopes "import:adapt"}}
     <button class="projects-sidebar-import-course action-secondary">
       <span class="projects-sidebar-import-course-inner">{{t 'app.importcourse'}}</span>
     </button>
-  {{/ifHasPermissions}}
+  {{/ifHasScopes}}
 
   <div class="separator"></div>
 
