Refactor for new API

--- a/app/modules/userManagement/templates/user.hbs
+++ b/app/modules/userManagement/templates/user.hbs
@@ -45,7 +45,7 @@
         <div class="read">
           <ul>
           {{#each roleNames}}
-            <li class="no-wrap">{{this}}</li>
+            <li class="no-wrap">{{this.attributes.displayName}}</li>
           {{/each}}
           </ul>
         </div>
