--- a/app/modules/userManagement/templates/userManagementFilter.hbs
+++ b/app/modules/userManagement/templates/userManagementFilter.hbs
@@ -23,8 +23,8 @@
   {{#each roles}}
   <div class="sidebar-row">
     <label class="sidebar-tag">
-      <span>{{name}}</span>
-      <input type="checkbox" name="roleNames" value="{{name}}">
+      <span>{{displayName}}</span>
+      <input type="checkbox" name="roleNames" value="{{shortName}}">
       <i class="fa fa-toggle-off"></i>
     </label>
   </div>
