--- a/app/modules/userManagement/templates/user.hbs
+++ b/app/modules/userManagement/templates/user.hbs
@@ -49,7 +49,7 @@
     </div>
     <div class="col-20 col-centered">
       <div class="tb-col-inner">
-        {{failedLoginCount}}
+        {{failedLoginAttempts}}
         {{#if _isLocked}}
           <i class="fa fa-lock"></i>
         {{/if}}
@@ -81,7 +81,7 @@
                 <button class="btn secondary unlock">{{t 'app.unlockuser'}}</button>
               </div>
             {{else}}
-              {{#ifValueEquals failedLoginCount 0}}
+              {{#ifValueEquals failedLoginAttempts 0}}
               {{else}}
                 <div class="group">
                   <button class="btn secondary unlock">{{t 'app.resetlogins'}}</button>
