Switch to mapped attribute

--- a/app/modules/userManagement/templates/user.hbs
+++ b/app/modules/userManagement/templates/user.hbs
@@ -27,7 +27,7 @@
       <div class="tb-col-inner">
         <div class="read">
           <ul>
-          {{#each roleNames}}
+          {{#each roles}}
             <li class="no-wrap">{{this.attributes.displayName}}</li>
           {{/each}}
           </ul>
