--- a/app/modules/userManagement/templates/userManagement.hbs
+++ b/app/modules/userManagement/templates/userManagement.hbs
@@ -1,19 +1,25 @@
 <div class="container">
     <div class="inner">
         <div class="tb-heading col-row tb-row">
-            <div class="col-30">
+            <div class="col-25">
               <button data-sort="email" class="active sort sort-down">
                 <h4 class="tb-col-inner">{{t 'app.usernameoremail'}}</h4>
                 <i class="fa"></i>
               </button>
             </div>
-            <div class="col-20">
+            <div class="col-15">
               <button data-sort="roleNames" class="sort sort-down">
                 <h4 class="tb-col-inner">{{t 'app.role'}}</h4>
                 <i class="fa"></i>
               </button>
             </div>
-            <div class="col-20 col-centered">
+            <div class="col-10">
+              <button data-sort="authTypes" class="sort sort-down">
+                <h4 class="tb-col-inner">{{t 'app.authtype'}}</h4>
+                <i class="fa"></i>
+              </button>
+            </div>
+            <div class="col-10 col-centered">
               <button data-sort="failedLoginCount" class="sort sort-down">
                 <h4 class="tb-col-inner">{{t 'app.failedlogins'}}</h4>
                 <i class="fa"></i>
@@ -24,6 +30,10 @@
                 <h4 class="tb-col-inner">{{t 'app.lastaccess'}}</h4>
                 <i class="fa"></i>
               </button>
+            </div>
+            <div class="col-10">
+              <h4 class="tb-col-inner">{{t 'app.lockstatus'}}</h4>
+              <i class="fa"></i>
             </div>
             <div class="col-15">
             </div>
