Add data attribute to div

--- a/app/modules/editor/extensions/templates/editorExtensionsEdit.hbs
+++ b/app/modules/editor/extensions/templates/editorExtensionsEdit.hbs
@@ -29,7 +29,7 @@
             </div>
             <div class="extension-management-plugin-remove col-20 col-centered">
               <div class="extension-management-plugin-remove-inner tb-col-inner">
-                <button class="btn alert remove-extension" data-displayName="{{attributes.displayName}}" data-id="{{attributes._id}}">{{t 'app.remove'}}</button>
+                <button class="btn alert remove-extension" data-displayName="{{attributes.displayName}}" data-name="{{attributes.name}}" data-id="{{attributes._id}}">{{t 'app.remove'}}</button>
               </div>
             </div>
           </div>
@@ -71,7 +71,7 @@
 
                 <div class="extension-management-plugin-remove col-20 col-centered">
                     <div class="extension-management-plugin-remove-inner tb-col-inner">
-                        <button class="btn secondary add-extension" data-displayName="{{attributes.displayName}}" data-id="{{attributes._id}}">{{t 'app.add'}}</button>
+                        <button class="btn secondary add-extension" data-displayName="{{attributes.displayName}}" data-name="{{attributes.name}}" data-id="{{attributes._id}}">{{t 'app.add'}}</button>
                     </div>
                 </div>
 
