Fix asset upload

--- a/app/modules/assetManagement/templates/assetManagementModalNewAsset.hbs
+++ b/app/modules/assetManagement/templates/assetManagementModalNewAsset.hbs
@@ -3,7 +3,7 @@
 </button>
 <div class="asset-management-modal-new-asset-inner">
     <!-- Begin upload form -->
-    <form class="asset-form forms asset-form" action="api/asset" method="post">
+    <form class="asset-form forms asset-form" action="api/assets" method="post">
         <div class="form-group">
             <label for="file">
                 {{t 'app.assetfile'}} <span class="req">*</span>
@@ -46,7 +46,6 @@
         <div class="">
             <button class="asset-management-modal-new-asset-upload btn secondary">{{t 'app.upload'}}</button>
         </div>
-        <input type="hidden" name="tags" id="tags" />
     </form>
     <!-- end upload form -->
 </div>
