--- a/app/modules/assetManagement/templates/assetManagementNewAsset.hbs
+++ b/app/modules/assetManagement/templates/assetManagementNewAsset.hbs
@@ -1,6 +1,6 @@
 <div class="asset-management-new-asset-inner inner">
     <!-- Begin upload form -->
-    <form class="asset-form forms asset-form" action="api/asset" method="post">
+    <form class="asset-form forms asset-form" action="api/assets" method="post">
         <div class="form-group">
             <label for="file">
                 {{t 'app.assetfile'}} <span class="req">*</span>
@@ -40,7 +40,6 @@
             <label for="tags">{{t 'app.tags'}}</label>
             <input type="text" autocomplete="off" class="width-30" id="tags_control" name="tags_control" value="{{pickCSV tags "title"}}" />
         </div>
-        <input type="hidden" name="tags" id="tags" />
     </form>
     <!-- end upload form -->
 </div>
