--- a/app/core/index.hbs
+++ b/app/core/index.hbs
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="/modernizr.js"></script>
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
     <script type="text/javascript" src="/require.js" data-main="/js/origin.js"></script>
+    <script src="//pagecdn.io/lib/ace/1.4.12/ace.js"></script>
     <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
     <meta http-equiv="Pragma" content="no-store, no-cache" />
     <meta http-equiv="Expires" content="0" />
