Update attribute name

--- a/app/modules/pluginManagement/templates/pluginType.hbs
+++ b/app/modules/pluginManagement/templates/pluginType.hbs
@@ -21,7 +21,7 @@
     </div>
     {{#if extension}}
       <div class="pluginType-addedDefault col-10 col-centered">
-        <input class="pluginType-addedDefault" type="checkbox" {{#if _isAddedByDefault}}checked{{/if}}/>
+        <input class="pluginType-addedDefault" type="checkbox" {{#if isAddedByDefault}}checked{{/if}}/>
       </div>
     {{/if}}
     <div class="pluginType-update col-10 col-centered">
