--- a/app/modules/assetManagement/templates/assetManagementListItem.hbs
+++ b/app/modules/assetManagement/templates/assetManagementListItem.hbs
@@ -8,27 +8,27 @@
 
     <div class="asset-management-list-item-icon">
         <div class="asset-management-list-item-icon-inner">
-            {{#ifValueEquals assetType "image"}}
+            {{#ifValueEquals type "image"}}
             <i class="fa fa-file-image-o"></i>
             {{/ifValueEquals}}
 
-            {{#ifValueEquals assetType "audio"}}
+            {{#ifValueEquals type "audio"}}
             <i class="fa fa-file-audio-o"></i>
             {{/ifValueEquals}}
 
-            {{#ifValueEquals assetType "video"}}
+            {{#ifValueEquals type "video"}}
             <i class="fa fa-file-video-o"></i>
             {{/ifValueEquals}}
 
-            {{#ifValueEquals assetType "other"}}
+            {{#ifValueEquals type "other"}}
             <i class="fa fa-file-o"></i>
             {{/ifValueEquals}}
         </div>
     </div>
 
-    {{#ifValueEquals assetType "image"}}
+    {{#ifValueEquals type "image"}}
         {{#if metadata}}
-        <div class="asset-management-list-item-image" data-style="background-image:url(api/asset/thumb/{{_id}})">
+        <div class="asset-management-list-item-image" style="background-image:url(api/assets/serve/{{_id}}?thumb=true)">
         {{else}}
         <div class="asset-management-list-item-image">
             <i class="fa fa-file-image-o"></i>
@@ -37,9 +37,9 @@
     </div>
     {{/ifValueEquals}}
 
-    {{#ifValueEquals assetType "video"}}
+    {{#ifValueEquals type "video"}}
         {{#if metadata}}
-        <div class="asset-management-list-item-image" data-style="background-image:url(api/asset/thumb/{{_id}})"}>
+        <div class="asset-management-list-item-image" style="background-image:url(api/assets/serve/{{_id}}?thumb=true)"}>
         {{else}}
         <div class="asset-management-list-item-image">
             <i class="fa fa-file-video-o"></i>
@@ -48,13 +48,13 @@
     </div>
     {{/ifValueEquals}}
 
-    {{#ifValueEquals assetType "audio"}}
+    {{#ifValueEquals type "audio"}}
     <div class="asset-management-list-item-image">
         <i class="fa fa-file-audio-o"></i>
     </div>
     {{/ifValueEquals}}
 
-    {{#ifValueEquals assetType "other"}}
+    {{#ifValueEquals type "other"}}
     <div class="asset-management-list-item-image">
         <i class="fa fa-file-o"></i>
     </div>
