Adjust header styles

--- a/app/modules/userManagement/templates/userManagement.hbs
+++ b/app/modules/userManagement/templates/userManagement.hbs
@@ -7,13 +7,13 @@
                 <i class="fa"></i>
               </button>
             </div>
-            <div class="col-15">
+            <div class="col-15 col-centered">
               <button data-sort="roleNames" class="sort sort-down">
                 <h4 class="tb-col-inner">{{t 'app.role'}}</h4>
                 <i class="fa"></i>
               </button>
             </div>
-            <div class="col-10">
+            <div class="col-10 col-centered">
               <button data-sort="authTypes" class="sort sort-down">
                 <h4 class="tb-col-inner">{{t 'app.authtype'}}</h4>
                 <i class="fa"></i>
