Add dash for empty values

--- a/app/modules/userManagement/templates/user.hbs
+++ b/app/modules/userManagement/templates/user.hbs
@@ -73,6 +73,8 @@
           <i class="fa fa-lock temp"></i>
         {{else if isPermLocked}}
           <i class="fa fa-lock perm"></i>
+        {{else}}
+          -
         {{/if}}
       </div>
     </div>
