--- a/app/modules/editor/contentObject/templates/editorPageComponent.hbs
+++ b/app/modules/editor/contentObject/templates/editorPageComponent.hbs
@@ -2,9 +2,7 @@
 
 <div class="component-inner">
   <div class="component-detail no-select">
-    {{#if _componentTypeDisplayName}}
-      <div class="component-type">{{_componentTypeDisplayName}}</div>
-    {{/if}}
+    <div class="component-type">{{getComponentDisplayName _component}}</div>
     <h4 class="component-title">{{#if displayTitle}}{{displayTitle}}{{else}}{{title}}{{/if}}</h4>
     <div class="component-body">{{{body}}}</div>
   </div>
