Update modal styles

--- a/app/modules/modal/less/modal.less
+++ b/app/modules/modal/less/modal.less
@@ -32,9 +32,11 @@
     height:100%;
     z-index:4000;
     overflow-y: scroll;
+    background: rgba(0,0,0,0.4);
     .modal-popup {
         background-color: @ui-content-color;
         height: 100%;
+        margin: 2.5%;
     }
 
     i {
