--- a/app/modules/assetManagement/templates/assetManagementPreview.hbs
+++ b/app/modules/assetManagement/templates/assetManagementPreview.hbs
@@ -1,21 +1,21 @@
 <div class="asset-preview-details text-centered">
   <div class="asset-preview-details-preview">
-    {{#ifValueEquals assetType "image"}}
-      <img src="api/asset/serve/{{_id}}"/>
+    {{#ifValueEquals type "image"}}
+      <img src="api/assets/serve/{{_id}}"/>
     {{/ifValueEquals}}
 
-    {{#ifValueEquals assetType "video"}}
+    {{#ifValueEquals type "video"}}
       <video preload="auto" controls width="640px" height="360px" poster="" style="width:100%; height:100%;">
-        <source src="api/asset/serve/{{_id}}" type="{{mimeType}}"/>
+        <source src="api/assets/serve/{{_id}}" type="{{mimeType}}"/>
       </video>
     {{/ifValueEquals}}
 
-    {{#ifValueEquals assetType "audio"}}
+    {{#ifValueEquals type "audio"}}
       <i class="fa fa-file-audio-o"></i>
-      <audio src="api/asset/serve/{{_id}}" type="{{mimeType}}" controls="controls" style="width:100%;"></audio>
+      <audio src="api/assets/serve/{{_id}}" type="{{mimeType}}" controls="controls" style="width:100%;"></audio>
     {{/ifValueEquals}}
 
-    {{#ifValueEquals assetType "other"}}
+    {{#ifValueEquals type "other"}}
       <i class="fa fa-file-o"></i>
     {{/ifValueEquals}}
   </div>
