--- a/app/modules/modal/less/modal.less
+++ b/app/modules/modal/less/modal.less
@@ -30,13 +30,14 @@
     left:0;
     width:100%;
     height:100%;
+    padding: 2.5%;
+    box-sizing: border-box;
     z-index:4000;
     overflow-y: scroll;
     background: rgba(0,0,0,0.4);
     .modal-popup {
         background-color: @ui-content-color;
         height: 100%;
-        margin: 2.5%;
     }
 
     i {
