--- a/app/modules/projects/templates/project.hbs
+++ b/app/modules/projects/templates/project.hbs
@@ -39,16 +39,16 @@
         </div>
         {{/if}}
 
-        {{#if tags.length}}
+        {{#if tagTitles.length}}
         <div class="project-details-tags project-details-row tags">
           <div class="projects-details-tags-button">
             <button class="btn secondary-hollow projects-details-tags-button-show">{{t 'app.viewtags'}}</button>
           </div>
           <div class="projects-details-value tag-container">
             <ul class="items tags">
-            {{#each tags}}
-              <li class="item-row tag" title="{{{title}}}">
-                <span class="value-text">{{{title}}}</span>
+            {{#each tagTitles}}
+              <li class="item-row tag" title="{{{this}}}">
+                <span class="value-text">{{{this}}}</span>
               </li>
             {{/each}}
             </ul>
