--- a/app/modules/pluginManagement/templates/pluginType.hbs
+++ b/app/modules/pluginManagement/templates/pluginType.hbs
@@ -29,9 +29,9 @@
         {{#if isLocalPackage}}
           <i title="{{t 'app.uploadedbyuser'}}" class="user-uploaded fa fa-user"></i>
         {{else}}
-          <button title="{{t 'app.checkforupdates'}}" class="plugin-update-check btn"><i class="fa fa-refresh"></i></button>
+          <button title="{{t 'app.updateplugin'}}" class="plugin-update btn secondary"><i class="fa fa-refresh"></i></button>
         {{/if}}
-          <button title="{{t 'app.remove'}}" class="plugin-remove btn alert"><i class="fa fa-trash-o"></i></button>
+        <button title="{{t 'app.remove'}}" class="plugin-remove btn alert"><i class="fa fa-trash-o"></i></button>
       </div>
     </div>
   </div>
