--- a/app/modules/userManagement/templates/userManagement.hbs
+++ b/app/modules/userManagement/templates/userManagement.hbs
@@ -7,7 +7,7 @@
                 <i class="fa"></i>
               </button>
             </div>
-            <div class="col-15 col-centered">
+            <div class="col-15">
               <button data-sort="roleNames" class="sort sort-down">
                 <h4 class="tb-col-inner">{{t 'app.role'}}</h4>
                 <i class="fa"></i>
