--- a/app/modules/assetManagement/templates/assetManagementPreview.hbs
+++ b/app/modules/assetManagement/templates/assetManagementPreview.hbs
@@ -32,8 +32,8 @@
     <div class="asset-height">{{t 'app.assetdimensions'}}: {{{metadata.width}}} x {{{metadata.height}}}</div>
   {{/if}}
 
-  {{#if tags.length}}
-    <div class="asset-tags">{{t 'app.tags'}}: {{renderTags tags "title"}}</div>
+  {{#if tagsMapped.length}}
+    <div class="asset-tags">{{t 'app.tags'}}: {{renderTags tagsMapped "title"}}</div>
   {{/if}}
 
   {{#if isSelectable}}
