--- a/app/modules/assetManagement/less/assetManagementNew.less
+++ b/app/modules/assetManagement/less/assetManagementNew.less
@@ -1,26 +1,11 @@
-@import 'sharedStyles';
-@import 'colours';
-
 .asset-management-new-asset {
-    .form-container-style;
-
-    .progress-container {
-        position:relative;
-        visibility:hidden;
-        width:76px;
-        height:10px;
-        background-color: @white;
-        border:1px solid black;
-        overflow: hidden;
-        border-radius: 8px;
-        margin: 10px 0;
-        .progress-bar {
-            width:0%;
-                background-color: @primary-color;
-            height:100%;
-            .progress-percent {
-                display: none;
-            }
+    .asset-thumb {
+        max-width: 800px;
+        margin: 20px;
+        margin-bottom: 0;
+        img {
+            border: 1px dashed #d6f2f9;
+            background: white;
         }
     }
 }
