--- a/app/modules/assetManagement/templates/assetManagementNewAsset.hbs
+++ b/app/modules/assetManagement/templates/assetManagementNewAsset.hbs
@@ -1,45 +1,9 @@
-<div class="asset-management-new-asset-inner inner">
-    <!-- Begin upload form -->
-    <form class="asset-form forms asset-form" action="api/assets" method="post">
-        <div class="form-group">
-            <label for="file">
-                {{t 'app.assetfile'}} <span class="req">*</span>
-                <span class="error"></span>
-            </label>
-            {{#if path}}
-            <div class="asset-management-new-asset-file">
-                {{t 'app.fileuploaded'}}
-            </div>
-            {{else}}
-            <input type="file" class="asset-file" name="file">
-            {{maxUploadSize}}
-            <div class="progress-container">
-                <div class="progress-bar">
-                    <div class="progress-percent">0%</div>
-                </div>
-            </div>
-            {{/if}}
+<div class="asset-management-new-asset-inner">
+    {{#if _id}}
+        <div class="asset-thumb">
+            <img src="/api/assets/serve/{{_id}}?thumb=true"></img>
         </div>
-        <div class="form-group">
-            <label for="title">
-                {{t 'app.assettitle'}} <span class="req">*</span>
-                <span class="error"></span>
-            </label>
-            <input type="text" class="asset-title required" name="title" placeholder="{{t 'app.assettitle'}}" value="{{ title }}" autocomplete="off">
-        </div>
-
-        <div class="form-group">
-            <label for="description">
-                {{t 'app.assetdescription'}} <span class="req">*</span>
-                <span class="error"></span>
-            </label>
-            <textarea class="asset-description required" name="description" placeholder="{{t 'app.assetdescription'}}">{{ description }}</textarea>
-        </div>
-
-        <div class="form-group tags">
-            <label for="tags">{{t 'app.tags'}}</label>
-            <input type="text" autocomplete="off" class="width-30" id="tags_control" name="tags_control" value="{{pickCSV tags "title"}}" />
-        </div>
-    </form>
-    <!-- end upload form -->
+    {{/if}}
+    <div class="form-container">
+    </div>
 </div>
