Add styling to hide fieldsets

--- a/app/modules/assetManagement/less/assetManagementNew.less
+++ b/app/modules/assetManagement/less/assetManagementNew.less
@@ -1,4 +1,10 @@
 .asset-management-new-asset {
+    .legend {
+        display: none;
+    }
+    fieldset {
+        padding-top: 20px;
+    }
     .asset-thumb {
         max-width: 800px;
         margin: 20px;
