--- a/app/modules/assetManagement/templates/assetManagementNewAsset.hbs
+++ b/app/modules/assetManagement/templates/assetManagementNewAsset.hbs
@@ -1,7 +1,7 @@
 <div class="asset-management-new-asset-inner">
     {{#if _id}}
         <div class="asset-thumb">
-            <img src="/api/assets/serve/{{_id}}?thumb=true"></img>
+            <img src="/api/assets/serve/{{_id}}?thumb=true&{{timestring updatedAt}}"></img>
         </div>
     {{/if}}
     <div class="form-container">
