--- a/app/modules/assetManagement/templates/assetManagementPreview.hbs
+++ b/app/modules/assetManagement/templates/assetManagementPreview.hbs
@@ -1,18 +1,18 @@
 <div class="asset-preview-details text-centered">
   <div class="asset-preview-details-preview">
     {{#ifValueEquals type "image"}}
-      <img src="api/assets/serve/{{_id}}"/>
+      <img src="api/assets/serve/{{_id}}?{{timestring updatedAt}}"/>
     {{/ifValueEquals}}
 
     {{#ifValueEquals type "video"}}
       <video preload="auto" controls width="640px" height="360px" poster="" style="width:100%; height:100%;">
-        <source src="api/assets/serve/{{_id}}" type="{{mimeType}}"/>
+        <source src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{mimeType}}"/>
       </video>
     {{/ifValueEquals}}
 
     {{#ifValueEquals type "audio"}}
       <i class="fa fa-file-audio-o"></i>
-      <audio src="api/assets/serve/{{_id}}" type="{{mimeType}}" controls="controls" style="width:100%;"></audio>
+      <audio src="api/assets/serve/{{_id}}?{{timestring updatedAt}}" type="{{mimeType}}" controls="controls" style="width:100%;"></audio>
     {{/ifValueEquals}}
 
     {{#ifValueEquals type "other"}}
