--- a/app/modules/notify/plugins/alert/less/alert.less
+++ b/app/modules/notify/plugins/alert/less/alert.less
@@ -2,7 +2,7 @@
 @import 'buttons';
 @import 'colours';
 
-.sweet-alert {
+.swal2-popup {
   max-height: 91%;
   overflow-y: auto;
   details {
@@ -19,49 +19,41 @@
     min-width: 100px;
     margin: 10px 5px 20px 5px;
 
-    &.cancel {
+    &.swal2-cancel {
       .btn;
       .primary-hollow;
       font-size: 115%;
     }
-    &.confirm {
+    &.swal2-confirm {
       .btn;
       .primary;
       font-size: 115%;
     }
   }
-  .sa-icon {
-    &.sa-error {
+  .swal2-icon {
+    &.swal2-error {
       border-color: @alert-color;
-      .sa-line { background-color: @alert-color; }
+      .swal2-icon-content { color: @alert-color; }
     }
-    &.sa-warning {
+    &.swal2-warning {
       border-color: @warning-color;
-      .sa-dot, .sa-body { background-color: @warning-color; }
+      .swal2-icon-content { color: @warning-color; }
     }
-    &.sa-info {
+    &.swal2-info {
       border-color: @info-color;
-      &:before, &:after { background-color: @info-color; }
+      .swal2-icon-content { color: @info-color; }
     }
-    &.sa-success {
+    &.swal2-success {
       .sa-line { background-color: @success-color; }
-      .sa-placeholder { border-color: fade(@success-color, 20%); }
+      .swal2-icon-content { color: @success-color; }
     }
   }
 
-  &.destructive {
-    .wait-text {
-      margin-right: 18px;
-    }
-    .la-ball-fall {
-      left: 37.5%;
-      top: 46%;
-      margin: 0;
-      > div {
-          width: 3px;
-          height: 3px;
-          margin: 1.5px;
-      }
-    }
+  .swal2-timer-progress-bar-container,
+  .swal2-timer-progress-bar {
+    height: .3em;
+  }
+  .swal2-timer-progress-bar {
+    background: @secondary-color;
   }
 }
