Add type colour

--- a/app/modules/notify/plugins/toast/less/toast.less
+++ b/app/modules/notify/plugins/toast/less/toast.less
@@ -36,6 +36,9 @@
   &.warning {
     background-color: @warning-color;
   }
+  &.success {
+    background-color: @success-color;
+  }
   &:hover {
     border: 1px solid white;
   }
