Make toast text more legible

--- a/app/modules/notify/plugins/toast/less/toast.less
+++ b/app/modules/notify/plugins/toast/less/toast.less
@@ -14,7 +14,8 @@
   display: flex;
   background-color: #9CABC4;
   color: @white;
-  font-size: 110%;
+  font-size: 115%;
+  font-weight: bold;
   text-align: left;
   padding: 20px;
   border-radius: 3px;
