--- a/app/core/index.hbs
+++ b/app/core/index.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
     {{#if isProduction}}
-    <script type="text/javascript" src="/require.js" data-main="/js/origin.js"></script>
+    <script type="text/javascript" src="/require.js" data-main="/js/adapt.js"></script>
     {{else}}
     <script src="/require.js"></script>
     <script src="/core/config.js"></script>
