Fix HTML exposed version numbers

--- a/app/core/index.hbs
+++ b/app/core/index.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-adapt-framework-version="" data-adapt-authoring-version="">
+<html lang="en" data-adapt-framework-version="{{versions.adapt_framework}}" data-adapt-authoring-version="{{versions.adapt-authoring}}">
   <head>
     <title>{{productName}}</title>
     <link rel="icon" type="image/png" href="/css/assets/favicon.png" />
