--- a/app/core/index.hbs
+++ b/app/core/index.hbs
@@ -4,7 +4,7 @@
     <title>{{productName}}</title>
     <link rel="icon" type="image/png" href="/css/assets/favicon.png" />
     <link rel="stylesheet" href="/css/adapt.css" />
-    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="//cdn.ckeditor.com/4.5.7/full-all/ckeditor.js"></script>
     {{#if isProduction}}
     <script type="text/javascript" src="/require.js" data-main="/js/adapt.js"></script>
