Add ability to transfer courses of deleted users

--- a/app/modules/userManagement/less/userManagement.less
+++ b/app/modules/userManagement/less/userManagement.less
@@ -1,6 +1,18 @@
 @user-hover-bg-colour: #f3faff;
 @user-hover-borderl-colour: #8ea3af;
 
+.module-userManagement {
+  .swal2-popup {
+    .swal2-html-container {
+      overflow-x: hidden;
+      .swal2-select,
+      .email-container {
+        margin-bottom: 15px;
+      }
+    }
+  }
+}
+
 .user-management-filter {
 
   .filter-inner {
