Update modal width

--- a/app/modules/scaffold/less/modal.less
+++ b/app/modules/scaffold/less/modal.less
@@ -15,7 +15,8 @@
   float: right;
   background-color: @white;
   height: 100%;
-  width: 440px;
+  width: 75%;
+  max-width: 700px;
   border-left: 1px solid #ccc;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
