--- a/app/modules/scaffold/less/forms.less
+++ b/app/modules/scaffold/less/forms.less
@@ -1,9 +1,9 @@
 // apply border to only the top level fieldset
-.form-container > form > div > fieldset {
-  border: 1px solid #d6f2f9;
-  margin: 20px;
-  padding-bottom: 15px;
-  max-width: 800px;
+.form-container {
+  .form-container-style;
+  > form > div > fieldset {
+    padding-bottom: 15px;
+  }
 }
 
 fieldset {
