--- a/app/core/less/sharedStyles.less
+++ b/app/core/less/sharedStyles.less
@@ -49,7 +49,7 @@
 .form-container-style {
   max-width: 1000px;
   margin: 20px;
-  border: 1px solid #d6f2f9;
+  border: 1px solid darken(@ui-content-color, 10%);
   background-color: @white;
   > .inner {
     padding: 30px;
