--- a/app/modules/modal/less/modal.less
+++ b/app/modules/modal/less/modal.less
@@ -6,7 +6,7 @@
     left:0;
     width:100%;
     height:100%;
-    padding: 2.5%;
+    padding: 30px;
     box-sizing: border-box;
     z-index:4000;
     overflow-y: scroll;
