Fix user profile password change

--- a/app/modules/user/templates/userProfile.hbs
+++ b/app/modules/user/templates/userProfile.hbs
@@ -51,6 +51,7 @@
             <div class="change-password-section">
               <div class="form-group">
                 <div class="inner display-none">
+                  <p>{{t 'app.reauthrequiredonnewpass'}}</p>
                   <label for="password">{{t 'app.newpassword'}}
                     <span class="req">*</span>
                     <span id="passwordError" class="error feedback"></span>
