Update Ace editor and switch CDN host

--- a/app/core/index.hbs
+++ b/app/core/index.hbs
@@ -13,7 +13,7 @@
     <script src="/core/config.js"></script>
     <script src="/core/app.js"></script>
     {{/if}}
-    <script src="//pagecdn.io/lib/ace/1.4.12/ace.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.9.5/ace.js"></script>
     <meta http-equiv="cache-control" content="no-store, no-cache, must-revalidate" />
     <meta http-equiv="Pragma" content="no-store, no-cache" />
     <meta http-equiv="Expires" content="0" />
