Update templates to use new authType attribute

--- a/app/modules/userManagement/templates/user.hbs
+++ b/app/modules/userManagement/templates/user.hbs
@@ -52,9 +52,7 @@
       <div class="tb-col-inner">
         <div class="read">
           <ul>
-          {{#each authTypes}}
-            <li class="no-wrap">{{this}}</li>
-          {{/each}}
+            <li class="no-wrap">{{authType}}</li>
           </ul>
         </div>
       </div>
