--- a/app/modules/userManagement/templates/userManagement.hbs
+++ b/app/modules/userManagement/templates/userManagement.hbs
@@ -14,7 +14,7 @@
               </button>
             </div>
             <div class="col-10 col-centered">
-              <button data-sort="authTypes" class="sort sort-down">
+              <button data-sort="authType" class="sort sort-down">
                 <h4 class="tb-col-inner">{{t 'app.authtype'}}</h4>
                 <i class="fa"></i>
               </button>
