--- a/app/modules/user/templates/userProfile.hbs
+++ b/app/modules/user/templates/userProfile.hbs
@@ -47,7 +47,7 @@
             <input type="text" class="width-30" id="lastName" value="{{lastName}}" autocomplete="off">
           </div>
 
-          {{#ifArrayIncludes authTypes "local"}}
+          {{#ifValueEquals authType "local"}}
             <div class="change-password-section">
               <div class="form-group">
                 <div class="inner display-none">
