--- a/app/modules/user/templates/userProfile.hbs
+++ b/app/modules/user/templates/userProfile.hbs
@@ -63,7 +63,7 @@
                 <a href="#" class="btn primary change-password">{{t 'app.changepassword'}}</a>
               </div>
             </div>
-          {{/ifArrayIncludes}}
+          {{/ifValueEquals}}
 
         </form>
       </div>
