Remove list HTML from authType

--- a/app/modules/userManagement/templates/user.hbs
+++ b/app/modules/userManagement/templates/user.hbs
@@ -51,9 +51,7 @@
     <div class="col-10 col-centered">
       <div class="tb-col-inner">
         <div class="read">
-          <ul>
-            <li class="no-wrap">{{authType}}</li>
-          </ul>
+          {{authType}}
         </div>
       </div>
     </div>
