Fix navigation email text

--- a/app/modules/navigation/templates/navigation.hbs
+++ b/app/modules/navigation/templates/navigation.hbs
@@ -15,7 +15,7 @@
       <span>{{t 'app.help'}}</span>
     </a>
     <a href="#" class="navigation-item navigation-profile" data-event="user:profile">
-      {{t 'app.loggedinas'}}: <span>{{sub}}</span>
+      {{t 'app.loggedinas'}}: <span>{{user.email}}</span>
     </a>
     <a href="#" class="navigation-item navigation-user-logout btn white-hollow" data-event="user:logout">
       <span>{{t 'app.logout'}}</span>
